--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,6 +9,28 @@ $accent-color: #B63F55;
     box-sizing: border-box;
 }
 
+/* width */
+::-webkit-scrollbar {
+    width: 20px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    // border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: $primary-color;
+    // border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #444;
+}
+
 body {
     width: 100%;
     font-family: 'Nunito', sans-serif;
@@ -20,8 +42,8 @@ body {
         position: fixed;
     }
 
-    // main content
-    main {
+    // header 
+    header {
         z-index: 1;
         width: 100%;
         height: 100vh;
@@ -102,12 +124,18 @@ body {
             justify-content: center;
             flex-direction: column;
 
+            // see what I do.
             span {
                 font-size: 2rem;
             }
-            .fas {
-                font-size: 4rem;
-                cursor: pointer;
+            // arrow
+            a {
+                color: white;
+
+                .fas {
+                    font-size: 4rem;
+                    cursor: pointer;
+                }
             }
         }
     }
