--- a/scss/main.scss
+++ b/scss/main.scss
@@ -115,8 +115,7 @@ body {
         }
          // begin section
          .begin {
-            background-color: $accent-color;
-            color: $secondary-color;
+            color: $primary-color;
             width: 100%;
             height: 150px;
             display: flex;
@@ -125,19 +124,75 @@ body {
             flex-direction: column;
 
             // see what I do.
-            span {
+            .arrow-text {
                 font-size: 2rem;
+                transition: all 0.3s;
             }
             // arrow
-            a {
-                color: white;
+            .arrow {
+                color: $primary-color;
+                transition: all 0.3s;
 
                 .fas {
                     font-size: 4rem;
                     cursor: pointer;
                 }
             }
+            .arrow:hover {
+                color: $accent-color;
+            }
         }
+    }
+    // main nav 
+    nav {
+        width: 100%;
+        height: 100px;
+        color: $secondary-color;
+        background-color: $accent-color;
+        display: flex;
+        align-items: center;
+
+        // ul items to menu
+        .menu-flex {
+            display: flex;
+            justify-content: start;
+            margin-left: 10rem;
+
+            .menu-item {
+                font-size: 1.2rem;
+                margin: 1.2rem;
+                cursor: pointer;
+                transition: all 0.3s;
+            }
+            .active {
+                color: #222;
+                border-bottom: 5px solid $primary-color;
+                transition: all 0.3s;
+            }
+        }
+        // flags
+        .flags {
+            width: 60px;
+            height: 40px;
+            cursor: pointer;
+            border: 3px solid $secondary-color;
+            border-radius: 10px;
+            margin: 5px;
+            margin-left: 20px;
+        }
+    }
+    // stick nav & animatation
+    #stickThis.stick {
+        margin-top: 0;
+        position: fixed;
+        top: 0;
+        z-index: 9999;
+    }
+    .menu-animate {
+        font-size: 1.5rem;
+        margin: 1.5rem;
+        cursor: pointer;
+        transition: all 0.3s;
     }
 }
 
