--- a/scss/main.scss
+++ b/scss/main.scss
@@ -50,11 +50,6 @@ body {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        // overflow: hidden;
-        // background-image: url('../images/shp.png');
-        // background-size: cover;
-        // background-repeat: no-repeat;
-        // background-attachment: fixed;
 
         // flex header
         .header-flex {
@@ -147,7 +142,6 @@ body {
     nav {
         width: 100%;
         height: 100px;
-        color: $secondary-color;
         background-color: $accent-color;
         display: flex;
         align-items: center;
@@ -158,11 +152,21 @@ body {
             justify-content: start;
             margin-left: 10rem;
 
+            a {
+                text-decoration: none;
+                color: $secondary-color;
+            }
+            a:hover {
+                color: #333;
+            }
             .menu-item {
                 font-size: 1.2rem;
                 margin: 1.2rem;
                 cursor: pointer;
                 transition: all 0.3s;
+            }
+            .menu-item:hover {
+                color: #333;
             }
             .active {
                 color: #222;
