--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,206 +8,233 @@ $accent-color: #B63F55;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
-
 /* width */
 ::-webkit-scrollbar {
     width: 20px;
 }
-
 /* Track */
 ::-webkit-scrollbar-track {
     box-shadow: inset 0 0 5px grey; 
     // border-radius: 10px;
 }
-
 /* Handle */
 ::-webkit-scrollbar-thumb {
     background: $primary-color;
     // border-radius: 10px;
 }
-
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
     background: #444;
 }
-
 body {
     width: 100%;
     font-family: 'Nunito', sans-serif;
+}
+// cool affect
+canvas{
+    background-color: $secondary-color;
+    z-index: -1;
+    position: fixed;
+}
+// header 
+header {
+    z-index: 1;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
-    // cool affect
-    canvas{
-        background-color: $secondary-color;
-        z-index: -1;
-        position: fixed;
-    }
-
-    // header 
-    header {
-        z-index: 1;
-        width: 100%;
-        height: 100vh;
+    // flex header
+    .header-flex {
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        align-items: center;
 
-        // flex header
-        .header-flex {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+        // Hunter Shaw -- Image
+        .image-hunter {
+            border: 10px solid $primary-color;
+            width: 250px;
+            height: 250px;
+            border-radius: 100%;
+            // padding: 5px;
+            margin: 30px;
+        }
 
-            // Hunter Shaw -- Image
-            .image-hunter {
-                border: 10px solid $primary-color;
-                width: 250px;
-                height: 250px;
-                border-radius: 100%;
-                // padding: 5px;
-                margin: 30px;
-            }
+        // header text
+        .header-text {
+            text-align: center;
+            color: $primary-color;
 
-            // header text
-            .header-text {
-                text-align: center;
-                color: $primary-color;
+            // titles
+            .header-title {
+                font-size: 4rem;
+                padding: 10px;
 
-                // titles
-                .header-title {
-                    font-size: 4rem;
-                    padding: 10px;
-
-                    // name 
-                    .header-name {
-                        color: $accent-color;
-                    }
-                }
-                .header-sub-title {
-                    font-size: 5rem;
-                    padding: 10px;
-
-                    // web developer
-                    .header-web {
-                        color: $accent-color;
-                    }
+                // name 
+                .header-name {
+                    color: $accent-color;
                 }
             }
-
-            // social medias
-            .social-medias {
+            .header-sub-title {
                 font-size: 5rem;
-                color: $primary-color;
+                padding: 10px;
 
-                // social icons
-                .fab {
-                    cursor: pointer;
-                    transition: all 0.3s;
-                }
-                .fab:hover {
+                // web developer
+                .header-web {
                     color: $accent-color;
                 }
             }
         }
-         // begin section
-         .begin {
+
+        // social medias
+        .social-medias {
+            font-size: 5rem;
             color: $primary-color;
-            width: 100%;
-            height: 150px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
 
-            // see what I do.
-            .arrow-text {
-                font-size: 2rem;
+            // social icons
+            .fab {
+                cursor: pointer;
                 transition: all 0.3s;
             }
-            // arrow
-            .arrow {
-                color: $primary-color;
-                transition: all 0.3s;
-
-                .fas {
-                    font-size: 4rem;
-                    cursor: pointer;
-                }
-            }
-            .arrow:hover {
+            .fab:hover {
                 color: $accent-color;
             }
         }
     }
-    // main nav 
-    nav {
-        width: 100%;
-        height: 100px;
-        background-color: $accent-color;
-        display: flex;
-        align-items: center;
+}
+// begin section
+.begin {
+    color: $primary-color;
+    width: 100%;
+    height: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 
-        // ul items to menu
-        .menu-flex {
-            display: flex;
-            justify-content: start;
-            margin-left: 10rem;
+    // see what I do.
+    .arrow-text {
+        font-size: 2rem;
+        transition: all 0.3s;
+    }
+    // arrow
+    .arrow {
+        color: $primary-color;
+        transition: all 0.3s;
 
-            a {
-                text-decoration: none;
-                color: $secondary-color;
-            }
-            a:hover {
-                color: #333;
-            }
-            .menu-item {
-                font-size: 1.2rem;
-                margin: 1.2rem;
-                cursor: pointer;
-                transition: all 0.3s;
-            }
-            .menu-item:hover {
-                color: #333;
-            }
-            .active {
-                color: #222;
-                border-bottom: 5px solid $primary-color;
-                transition: all 0.3s;
-            }
-        }
-        // flags
-        .flags {
-            width: 60px;
-            height: 40px;
+        .fas {
+            font-size: 4rem;
             cursor: pointer;
-            border: 3px solid $secondary-color;
-            border-radius: 10px;
-            margin: 5px;
-            margin-left: 20px;
         }
     }
-    // stick nav & animatation
-    #stickThis {
-        margin-top: 0;
-        position: fixed;
-        top: 0;
-        z-index: 9999;
-        display: none;
-        transition: all 0.3s;
-    }
-    .section-header {
-        font-size: 4rem;
-        text-align: center;
-        transition: all 0.3s;
-        padding-top: 120px;
-    
-        hr {
-            width: 20%;
-            border-width: 3.5px;
-            border-color: $primary-color;
-            border-radius: 10px;
-        }
+    .arrow:hover {
+        color: $accent-color;
     }
 }
+// main nav 
+nav {
+    width: 100%;
+    height: 100px;
+    background-color: $accent-color;
+    display: flex;
+    align-items: center;
 
+    // ul items to menu
+    .menu-flex {
+        display: flex;
+        justify-content: start;
+        margin-left: 10rem;
 
-// conncet macbook to github
+        a {
+            text-decoration: none;
+            color: $secondary-color;
+        }
+        a:hover {
+            color: #333;
+        }
+        .menu-item {
+            font-size: 1.2rem;
+            margin: 1.2rem;
+            cursor: pointer;
+            transition: all 0.3s;
+        }
+        .menu-item:hover {
+            color: #333;
+        }
+        .active {
+            color: #222;
+            border-bottom: 5px solid $primary-color;
+            transition: all 0.3s;
+        }
+    }
+    // flags
+    .flags {
+        width: 60px;
+        height: 40px;
+        cursor: pointer;
+        border: 3px solid $secondary-color;
+        border-radius: 10px;
+        margin: 5px;
+        margin-left: 20px;
+    }
+}
+// stick nav & animatation
+#stickThis {
+    margin-top: 0;
+    position: fixed;
+    top: 0;
+    z-index: 9999;
+    display: none;
+    transition: all 0.3s;
+}
+// section headers
+.section-header {
+    font-size: 4rem;
+    text-align: center;
+    transition: all 0.3s;
+    padding-top: 120px;
+    text-transform: uppercase;
+
+    hr {
+        width: 300px;
+        border-width: 3.5px;
+        border-color: $primary-color;
+        border-radius: 10px;
+    }
+}
+// icons & info
+.icons-flex {
+    display: flex;
+    flex-direction: row;
+    width: 90%;
+    margin: 0 auto;
+}
+.icons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin-top: 20px;
+
+    #fix-rocket {
+        padding: 30px 35px;
+    }
+    span {
+        font-size: 3rem;
+        padding: 30px 40px;
+        background-color: $primary-color;
+        border-radius: 100%;
+        color: $secondary-color;
+        border: 5px solid $accent-color;
+    }
+    h1 {
+        font-size: 2.5rem;
+        padding: 20px;
+    }
+    p {
+        font-size: 1.5rem;
+        padding: 10px 25px;
+        color: #333;
+    }
+}
