--- a/scss/main.scss
+++ b/scss/main.scss
@@ -206,7 +206,7 @@ nav {
     width: 90%;
     margin: 0 auto;
     
-    @media screen and (max-width: 900px) {
+    @media screen and (max-width: 1200px) {
         flex-wrap: wrap;
         width: 70%;
     }
@@ -235,49 +235,68 @@ nav {
     h1 {
         font-size: 2.5rem;
         padding: 20px;
-
-        @media screen and (max-width: 1200px) {
-            font-size: 2.0rem;
-        }
     }
     p {
         font-size: 1.5rem;
         padding: 10px 25px;
         color: #333;
-
-        @media screen and (max-width: 1200px) {
-            font-size: 1.0rem;
-        }
     }
 }
 .about-intro {
     display: flex;
     justify-content: center;
     align-content: center;
+    align-items: center;
+    flex-direction: row;
     width: 100%;
     margin-top: 30px;
+
+    @media screen and (max-width: 1400px) {
+        flex-direction: column;
+    }
 }
 .about-me {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
+    align-content: center;
+    box-align: center;
+    box-pack: center;
     width: 35%;
 
-    img {
-        border: 10px solid $primary-color;
-        width: 200px;
-        height: 200px;
-        border-radius: 100%;
-        // padding: 5px;
-        margin: 10px;
+    @media screen and (max-width: 1400px) {
+        width: 80%;
+        margin-bottom: 20px;
     }
-    p {
-        font-size: 1.3rem;
-        padding: 1rem 2rem;
-        text-indent: 2rem;
 
-        span {
-            color: $accent-color;
+    div {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        align-content: center;
+        box-align: center;
+        box-pack: center;
+
+        img {
+            border: 10px solid $primary-color;
+            width: 250px;
+            height: 250px;
+            border-radius: 100%;
+            // padding: 5px;
+            margin: 10px;
+        }
+        p {
+            font-size: 1.5rem;
+            padding: 1rem;
+            text-indent: 2rem;
+
+            @media screen and (max-width: 1400px) {
+                width: 80%;
+            }
+
+            span {
+                color: $accent-color;
+            }
         }
     }
 }
@@ -286,6 +305,10 @@ nav {
     display: flex;
     flex-direction: column;
     align-content: center;
+
+    @media screen and (max-width: 1400px) {
+        width: 80%;
+    }
 }
 .skills-text{
     display: flex;
@@ -333,3 +356,70 @@ nav {
     border-radius: 10px;
     width: 10%;
 }
+// menu button SASS from https://codepen.io/anon/pen/wZjbMG
+$menu-color: #222;
+$snappy : cubic-bezier(0.694,  0.048, 0.335, 1.000);
+
+.menu-container {
+  cursor: pointer;
+  .bars {
+    width: 60px;
+    height: 20px;
+    position: absolute;
+    top: 45px;
+    left: 90%;
+    transition: transform 0.3s $snappy;
+    // border: 1px solid white;
+    span {
+      display: block;
+      width: 100%;
+      height: 10px;
+      background-color: $menu-color;
+      margin-top: 10px;
+      &:first-child {
+        margin-top: 0;
+        transform: scaleX(1);
+        transition: transform 0.2s $snappy;
+        transition-delay: 0.4s;
+      }
+      &:nth-child(3) {
+        width: 65%;
+        transition: width 0.2s $snappy;
+        transition-delay: 0.4s;
+      }
+    }
+    .other-bar {
+      width: 10px;
+      height: 0;
+      background-color: $menu-color;
+      position: absolute;
+      top: -7px;
+      left: 50%;
+      margin-left: -5px;
+      transition: height 0.4s $snappy;
+      z-index: 10;
+    }
+  }
+  &.is-menu-open {
+    .bars {
+      transform: rotate(45deg);
+      transition-delay: 0.4s;
+      span {
+        &:first-child {
+          transform: scaleX(0);
+          transition: transform 0.2s $snappy;
+        }
+        &:nth-child(3) {
+          width: 0;
+          transition: width 0.2s $snappy;
+        }
+      }
+      .other-bar {
+        height: 63px;
+        transition: height 0.2s $snappy;
+        transition-delay: 0.3s;
+      }
+    }
+  }
+}
+// end of menu button
