--- a/scss/main.scss
+++ b/scss/main.scss
@@ -43,14 +43,15 @@ header {
     height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    padding-top: 15rem; 
+    justify-content: center;
+    align-items: center;
 
     // flex header
     .header-flex {
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin-top: auto;
 
         // header text
         .header-text {
@@ -61,6 +62,10 @@ header {
             .header-title {
                 font-size: 4rem;
                 padding: 10px;
+
+                @media screen and (max-width: 900px) {
+                    font-size: 3rem;
+                }
                 
                 // name 
                 .header-color {
@@ -69,6 +74,16 @@ header {
             }
             .header-sub-title {
                 font-size: 5rem;
+
+                @media screen and (max-width: 900px) {
+                    font-size: 4rem;
+                }
+                @media screen and (max-width: 730px) {
+                    font-size: 3rem;
+                }
+                @media screen and (max-width: 540px) {
+                    font-size: 2.2rem;
+                }
             }
         }
 
@@ -78,6 +93,9 @@ header {
             color: $primary-color;
             transition: all 0.3s;
 
+            @media screen and (max-width: 540px) {
+                font-size: 4rem;
+            }
             // social icons
             .fab {
                 cursor: pointer;
@@ -94,6 +112,16 @@ header {
 }
 .typed-cursor {
     font-size: 4rem;
+
+    @media screen and (max-width: 900px) {
+        font-size: 3.5rem;
+    }
+    @media screen and (max-width: 730px) {
+        font-size: 3rem;
+    }
+    @media screen and (max-width: 540px) {
+        font-size: 2.5rem;
+    }
 }
 .header-title-flex {
     display: flex;
@@ -104,10 +132,12 @@ header {
     color: $primary-color;
     width: 100%;
     height: 150px;
+    margin-top: auto;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    align-self: flex-end;
 
     // see what I do.
     .arrow-text {
@@ -368,7 +398,7 @@ $snappy : cubic-bezier(0.694,  0.048, 0.335, 1.000);
 .menu-container {
     display: none;
     cursor: pointer;
-    
+
   .bars {
     width: 60px;
     height: 20px;
