--- a/scss/main.scss
+++ b/scss/main.scss
@@ -165,6 +165,7 @@ nav {
     background-color: $accent-color;
     display: flex;
     align-items: center;
+    border-bottom: 5px solid $primary-color;
 
     // ul items to menu
     .menu-flex {
@@ -224,8 +225,12 @@ nav {
     font-size: 4rem;
     text-align: center;
     transition: all 0.3s;
-    padding-top: 120px;
+    padding-top: 150px;
     text-transform: uppercase;
+
+    @media screen and (max-width: 600px) {
+        font-size: 3rem;
+    }
 
     hr {
         width: 300px;
@@ -471,6 +476,7 @@ $snappy : cubic-bezier(0.694,  0.048, 0.335, 1.000);
     background-color: $primary-color;
     overflow: hidden;
     border: 10px solid $accent-color;
+    border-top: 10px solid $primary-color;
     text-align: center;
 }
 .mobile-menu-flex {
@@ -490,4 +496,47 @@ $snappy : cubic-bezier(0.694,  0.048, 0.335, 1.000);
 }
 .a-mobile:hover {
     color: $accent-color;
+}
+.contact-footer {
+    width: 100%;
+    transform: translateY(3px);
+}
+.contact-section {
+    background: $accent-color;
+    color: $secondary-color;
+}
+footer {
+    background: $primary-color;
+    width: 100%;
+    height: 200px;
+    color: $secondary-color;
+    font-size: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.social-medias-footer {
+    font-size: 3rem;
+    margin: 10px;
+    cursor: pointer;
+
+    i {
+        transition: all 0.3s;
+    }
+    i:hover {
+        color: $accent-color;
+    }
+}
+.back-to-top-box {
+    position: absolute;
+    margin-top: -100px;
+    background: $secondary-color;
+    padding: 0 20px;
+    border-radius: 10px;
+}
+.up-arrow {
+    font-size: 5rem;
+    color: $primary-color;
+    cursor: pointer;
 }
