--- a/scss/main.scss
+++ b/scss/main.scss
@@ -209,6 +209,11 @@ nav {
         border-radius: 10px;
         margin: 5px;
         margin-left: 20px;
+
+        @media screen and (max-width: 900px) {
+            position: relative;
+            left: -60px;
+        }
     }
 }
 // stick nav & animatation
@@ -219,6 +224,18 @@ nav {
     z-index: 9999;
     display: none;
     transition: all 0.3s;
+
+    img {
+        width: 60px;
+        height: 40px;
+        cursor: pointer;
+        border: 3px solid $secondary-color;
+        border-radius: 10px;
+        position: relative;
+        left: 0px;
+        margin: 5px;
+        margin-left: 20px;
+    }
 }
 // section headers
 .section-header {
@@ -466,6 +483,40 @@ $snappy : cubic-bezier(0.694,  0.048, 0.335, 1.000);
     }
   }
 }
+.menu-container-first {
+    display: none;
+    cursor: pointer;
+    position: relative;
+    top: -15px;
+    left: 80%;
+
+  .bars-first {
+    width: 60px;
+    height: 20px;
+    z-index: 12;
+    transition: transform 0.3s $snappy;
+    // border: 1px solid white;
+
+    span {
+      display: block;
+      width: 100%;
+      height: 10px;
+      background-color: $menu-color;
+      margin-top: 10px;
+      &:first-child {
+        margin-top: 0;
+        transform: scaleX(1);
+        transition: transform 0.2s $snappy;
+        transition-delay: 0.4s;
+      }
+      &:nth-child(3) {
+        width: 65%;
+        transition: width 0.2s $snappy;
+        transition-delay: 0.4s;
+      }
+    }
+  }
+}
 .mobile-menu {
     display: none;
     position: fixed;
@@ -497,9 +548,9 @@ $snappy : cubic-bezier(0.694,  0.048, 0.335, 1.000);
 .a-mobile:hover {
     color: $accent-color;
 }
-.contact-footer {
+.contact-footer-image {
     width: 100%;
-    transform: translateY(3px);
+    transform: translateY(4px);
 }
 .contact-section {
     background: $accent-color;
