--- a/scss/main.scss
+++ b/scss/main.scss
@@ -66,6 +66,9 @@ header {
                 @media screen and (max-width: 900px) {
                     font-size: 3rem;
                 }
+                @media screen and (max-width: 540px) {
+                    font-size: 2.7rem;
+                }
                 
                 // name 
                 .header-color {
@@ -82,10 +85,11 @@ header {
                     font-size: 3rem;
                 }
                 @media screen and (max-width: 540px) {
-                    font-size: 2.2rem;
+                    font-size: 2.3rem;
                 }
             }
         }
+        
 
         // social medias
         .social-medias {
@@ -126,6 +130,7 @@ header {
 .header-title-flex {
     display: flex;
     flex-direction: row;
+    justify-content: center;
 }
 // begin section
 .begin {
@@ -371,7 +376,6 @@ nav {
             height: 250px;
             border-radius: 100%;
             margin: 10px;
-            transition: all 0.3s;
             
             @media screen and (max-width: 1300px) {
                 width: 200px;
@@ -382,7 +386,6 @@ nav {
             font-size: 1.4rem;
             padding: 1rem 3rem;
             text-indent: 2rem;
-            transition: all 0.3s;
             color: #333;
 
             @media screen and (max-width: 1400px) {
@@ -775,8 +778,8 @@ footer {
                 height: 200px;
             }
             @media screen and (max-width: 1100px) {
-                width: 450px;
-                height: 350px;
+                width: 400px;
+                height: 300px;
             }
             @media screen and (max-width: 600px) {
                 width: 300px;
@@ -795,9 +798,6 @@ footer {
 
             @media screen and (max-width: 1250px) {
                 font-size: 1.5rem;
-            }
-            @media screen and (max-width: 1100px) {
-                font-size: 2rem;
             }
         }
         span:hover {
