ADDED: added my newer portfolio site done in React.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -743,6 +743,7 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
     width: 95%;
     margin: 0 auto;
     transition: all 0.3s;
